# lemmy-summarizer

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yaml  publish.yaml  test.yaml
lemmy_summarizer/: __about__.py  main.py
tests/: __init__.py  test_main.py
