[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lemmy-summarizer"
dynamic = ["version"]
description = 'A Lemmy bot for summarizing news articles.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
    { name = "Daniel Ferreira", email = "daniel.ferreira.1@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pylemmy==0.0.2",
    "trafilatura==1.6.1",
    "transformers==4.30.2",
    "torch==2.0.1",
    "loguru==0.7.0",
]

[project.urls]
Documentation = "https://github.com/dcferreira/lemmy-summarizer#readme"
Issues = "https://github.com/dcferreira/lemmy-summarizer/issues"
Source = "https://github.com/dcferreira/lemmy-summarizer"

[tool.hatch.version]
path = "lemmy_summarizer/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "coverage[toml]>=6.5",
    "pytest",
    "pre-commit",
    "mypy>=1.0.0",
    "polyfactory~=2.3",
    "pydantic",
]
[tool.hatch.envs.default.scripts]
typing = "mypy --install-types --non-interactive {args:lemmy_summarizer tests}"
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
    "- coverage combine",
    "coverage report",
]
cov = [
    "test-cov",
    "cov-report",
]
build = "docker buildx build . -t lemmy-summarizer:local"

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "black>=23.1.0",
    "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
style = [
    "ruff {args:.}",
    "black --check --diff {args:.}",
]
fmt = [
    "black {args:.}",
    "ruff --fix {args:.}",
    "style",
]
all = [
    "style",
    "typing",
]

[tool.black]
target-version = ["py37"]

[tool.ruff]
target-version = "py37"
line-length = 88
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    # Ignore checks for possible passwords
    "S105", "S106", "S107",
    # Ignore complexity
    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
    # Don't touch unused imports
    "F401",
]

[tool.ruff.isort]
known-first-party = ["lemmy_summarizer"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["lemmy_summarizer", "tests"]
branch = true
parallel = true
omit = [
    "lemmy_summarizer/__about__.py",
]

[tool.coverage.paths]
lemmy_summarizer = ["lemmy_summarizer", "*/lemmy-summarizer/lemmy_summarizer"]
tests = ["tests", "*/lemmy-summarizer/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[[tool.mypy.overrides]]
module = [
    "transformers",
    "trafilatura.*",
]
ignore_missing_imports = true
